--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 </div>
 
 <div id = "AA" style= "padding: 0px; margin-bottom: -5px; margin-top: 0px; margin-left: -100px;">
-	<img class = "BCIMG scrop" style= "background-color: rgba(255, 255, 255, 0.664); margin:0;" src = "images/Massachusetts-Lexington-Lexington-Minuteman-Statue-John-Parker-1440x954.jpg">
+	<img class = "BCIMG scrop" style= "background-color: rgba(255, 255, 255, 0.664); margin:0; object-fit: cover; object-position: right top;" src = "images/Massachusetts-Lexington-Lexington-Minuteman-Statue-John-Parker-1440x954.jpg">
 </div>
 
 <!--
