--- a/index.html
+++ b/index.html
@@ -67,13 +67,13 @@
 			  <li class = "LEXINGTONM"><font color = "black">xLexingtonHS </font></li>
 			  <li class = "LEXINGTONN"><font color = "black"> 2018</font></li>
 			  <li><pre><p>                </p></pre></li>
-			  <li class = "ye"><a href="home.html#HOME" class = "link" style="text-decoration:none"><span  class="button"><pre>HOME</pre></span></a></li>
+			  <li class = "ye"><a href="index.html#HOME" class = "link" style="text-decoration:none"><span  class="button"><pre>HOME</pre></span></a></li>
 			  <li class = "ye"><pre><p style="color: #36303071">/</p></pre></li>
-			  <li class = "ye"><a href="home.html#ABOUT" class = "link" style="text-decoration:none"><span  class="button"><pre>ABOUT</pre></span></a></li>
+			  <li class = "ye"><a href="index.html#ABOUT" class = "link" style="text-decoration:none"><span  class="button"><pre>ABOUT</pre></span></a></li>
 			  <li class = "ye"><pre><p style="color: #36303071">/</p></pre></li>
-			  <li class = "ye"><a href="home.html#REGISTER" class = "link" style="text-decoration:none"><span  class="button"><pre>REGISTER</pre></span></a></li>
+			  <li class = "ye"><a href="index.html#REGISTER" class = "link" style="text-decoration:none"><span  class="button"><pre>REGISTER</pre></span></a></li>
 			  <li class = "ye"><pre><p style="color: #36303071">/</p></pre></li>
-			  <li class = "ye"><a href="home.html#CONTACT" class = "link" style="text-decoration:none"><span  class="button"><pre>CONTACTS</pre></span></a></li>
+			  <li class = "ye"><a href="index.html#CONTACT" class = "link" style="text-decoration:none"><span  class="button"><pre>CONTACTS</pre></span></a></li>
 			</ul>
 	</div>
 	
@@ -83,13 +83,13 @@
 		<table style ="width:100%; height: 60px; background-color: white; align-self: center">
 			<tr>
 				<th style = "width: 30%"><pre><p>     </p></pre></th>
-				<th style = "width: 60px;"><a href="home.html#HOME" class = "link" style="text-decoration:none;"><span  class="button"><pre>HOME</pre></span></a></th>
+				<th style = "width: 60px;"><a href="index.html#HOME" class = "link" style="text-decoration:none;"><span  class="button"><pre>HOME</pre></span></a></th>
 				<th style = "width: 2px;"><pre><p style="color: #36303071">/</p></pre></th>
-				<th style = "width: 60px;"><a href="home.html#ABOUT" class = "link" style="text-decoration:none"><span  class="button"><pre>ABOUT</pre></span></a></th>
+				<th style = "width: 60px;"><a href="index.html#ABOUT" class = "link" style="text-decoration:none"><span  class="button"><pre>ABOUT</pre></span></a></th>
 				<th style = "width: 2px;"><pre><p style="color: #36303071">/</p></pre></th>
-				<th style = "width: 60px;"><a href="home.html#REGISTER" class = "link" style="text-decoration:none"><span  class="button"><pre>REGISTER</pre></span></a></th>
+				<th style = "width: 60px;"><a href="index.html#REGISTER" class = "link" style="text-decoration:none"><span  class="button"><pre>REGISTER</pre></span></a></th>
 				<th style = "width: 2px;"><pre><p style="color: #36303071">/</p></pre></th>
-				<th style = "width: 60px;"><a href="home.html#CONTACT" class = "link" style="text-decoration:none"><span  class="button"><pre>CONTACTS</pre></span></a></th>
+				<th style = "width: 60px;"><a href="index.html#CONTACT" class = "link" style="text-decoration:none"><span  class="button"><pre>CONTACTS</pre></span></a></th>
 				<th style = "width: 30%"><pre><p>     </p></pre></th>
 			</tr>
 		</table>
