--- a/index.html
+++ b/index.html
@@ -237,7 +237,7 @@
 									<p><pre>                  </pre></p>
 									<p style = "font-family: 'PT Sans', sans-serif; font-size: 20px">
 									<span>TEDxLexingtonHS</span>  will connect the students and adults of Lexington as it will allow both of them
-									to present the same platform as they will both get to speak and listen to others. The talks
+									to present on the same platform as they will both get to speak and listen to others. The talks
 									themselves will revolve around new concepts previously undiscussed, professional and personal
 									experience, entrepreneurship, interdisciplinary connections as well as inspiring and interesting 
 									stories. These talks will empower both students, adults, and professionals with knowledge as well
