--- a/index.html
+++ b/index.html
@@ -277,12 +277,13 @@
 									<p><pre>                  </pre></p>
 											<!-- Link google form here?-->
 									<p style = "font-family: 'PT Sans', sans-serif; font-size: 20px">
-											To become a speaker, please submit a three to six minute video about your topic
-											and your background no later than January 3, 2019 in this form.
+											To become a speaker, please submit a three to six minute video on your topic
+											and your background no later than January 3, 2019 to 
+											<a style="color: blue" href="https://mail.google.com/mail/">tedxlexyouth@gmail.com</a>.
 											Our curating committee will be selecting the speakers list from 
 											these videos. We will email you if you are selected or if any materials are missing.
 											If you need clarifications or have questions, email Alex Mingolla, Ishaan Khurana and 
-											Srinivasan Sathiamurthy at <a style="color: blue" href="https://mail.google.com/mail/">tedxlex@gmail.com</a> 
+											Srinivasan Sathiamurthy using the contacts provided below.
 									</p>
 							</div>
 						</div>			
