--- a/index.html
+++ b/index.html
@@ -312,8 +312,8 @@
 							<h1  style = "font-family: 'Roboto', sans-serif; font-size: 35px">Tammy Darling</h1>
 							<p><pre>                  </pre></p>
 							<p style = "font-family: 'PT Sans', sans-serif; font-size: 20px">
-								Dr. Darling's two decades of innovative classroom teaching and diverse consulting work coalesced 
-								into a strengths-based positive education project to cultivate character in schools.  Dr. Darling 
+								Ms. Darling's two decades of innovative classroom teaching and diverse consulting work coalesced 
+								into a strengths-based positive education project to cultivate character in schools.  Ms. Darling 
 								founded the Mighty Project in August of 2017, Mighty stands for Mentorship Introduces Great 
 								Habits ToYouth.  She is an educator at Lexington High School and teaches Advanced Placement 
 								Psychology, Child Development and Race, Gender, and Human Behavior. She challenges her students
@@ -322,17 +322,45 @@
 							</p> 
 								 <p><pre>                  </pre></p>
 							<p style = "font-family: 'PT Sans', sans-serif; font-size: 20px">
-								Outside of the classroom, Dr. Darling is a lead educator and collaborator with Professor Danielle Allen at
-								 the Democratic Knowledge Project at Harvard University.  She is currently collaborating with 
-								 Professor Hardin Coleman at Boston University Wheelock College of Education and Human Development
-								  to investigate the efficacy of a developmental guidance activity to impact cognitive mindsets in 
-								  5th graders.
+								Outside of the classroom, Ms. Darling is a lead educator and collaborator with Professor Danielle Allen at
+								the Democratic Knowledge Project at Harvard University.  She is currently collaborating with 
+								Professor Hardin Coleman at Boston University Wheelock College of Education and Human Development
+								 to investigate the efficacy of a developmental guidance activity to impact cognitive mindsets in 
+								 5th graders.
 								
 							</p>
 	
 					</td></tr></table>
 		</div>
 	</div>
+
+	<div class="contentSection yellow">
+		<div class="textBox">
+			<table style="width:100%; min-height:200px; padding-top: 0px;" border="0" cellspacing="0">
+				<tr>
+					<td style="width:35%;min-height: 100%"><span><img src="images/Pratibha.jpg" style="width: 210px; height: 210px; padding-top: 0px; padding-left: 10px; float: left; margin-right: 10px;"></span></td>
+					<td style="width:60%;min-height: 100%;align-self: left; ">
+					
+					<h1  style = "font-family: 'Roboto', sans-serif; font-size: 35px">Pratibha Shah</h1>
+					<p><pre>                  </pre></p>
+					<p style = "font-family: 'PT Sans', sans-serif; font-size: 20px">
+						Pratibha Shah, BAMS, MD-Ayurveda, MPH, is a leading Ayurevda Expert in the United States. 
+						Her pioneering initiatives in the field of Ayurveda, have brought her to attention at 
+						the White House, the Department of Health and Human Services, as well as the Consulate 
+						General of India, NYC. For her work, she was also nominated in the Top 20 Women of the 
+						Year, for the year 2014. She is a senior faculty and Ayurveda Domain Expert for 
+						<a style="color: blue" href="https://www.ayurvedaacademy.com/">Kerala 
+							Ayurveda Academy</a> and CEO of My Ayurved LLC. She is the Founder, President of two non-profits -
+							<a style="color: blue" href="http://ayurvedaresearchusa.org/">Council for Ayurveda Research</a> and 
+							<a style="color: blue" href="http://www.wholistichealthalliance.org/">Wholistic Health Alliance</a>. She currently consults out at her
+						  home office in Danvers and at <a style="color: blue" href="https://www.welllifemedical.org/">Well Life Medical</a>, a state of the art Integrative Medicine 
+						  clinic in Massachusetts, USA. Before moving to the US, Shah was a Chief Medical Officer 
+						  with the AYUSH ministry in India.
+					</p>
+
+			</td></tr></table>
+	</div>
+</div>
 
 	<!--<div style = "height: 60px;">
 
@@ -379,8 +407,8 @@
 	</tr><tr><td style= "width: 100%; align-self: center;"><h1  style = "font-family: 'Roboto', sans-serif; font-size: 35px; text-align: center">Tammy Darling</h1>
 		<p><pre>                  </pre></p>
 		<p style = "font-family: 'PT Sans', sans-serif; font-size: 20px">
-			Dr. Darling's two decades of innovative classroom teaching and diverse consulting work coalesced 
-			into a strengths-based positive education project to cultivate character in schools.  Dr. Darling 
+			Ms. Darling's two decades of innovative classroom teaching and diverse consulting work coalesced 
+			into a strengths-based positive education project to cultivate character in schools.  Ms. Darling 
 			founded the Mighty Project in August of 2017, Mighty stands for Mentorship Introduces Great 
 			Habits ToYouth.  She is an educator at Lexington High School and teaches Advanced Placement 
 			Psychology, Child Development and Race, Gender, and Human Behavior. She challenges her students
@@ -389,7 +417,7 @@
 		</p> 
 			 <p><pre>                  </pre></p>
 		<p style = "font-family: 'PT Sans', sans-serif; font-size: 20px">
-			Outside of the classroom, Dr. Darling is a lead educator and collaborator with Professor Danielle Allen at
+			Outside of the classroom, Ms. Darling is a lead educator and collaborator with Professor Danielle Allen at
 			 the Democratic Knowledge Project at Harvard University.  She is currently collaborating with 
 			 Professor Hardin Coleman at Boston University Wheelock College of Education and Human Development
 			  to investigate the efficacy of a developmental guidance activity to impact cognitive mindsets in 
@@ -397,6 +425,30 @@
 			
 		</p>
 	</p></td></tr></td></tr></table></div></div>				
+
+
+	<div class="contentSection yellow"><div class="textBox"><table style="width:100%; min-height:200px; padding-top: 0px;" border="0" cellspacing="0">
+		<tr><td style="width:100%;min-height: 100%"><span><img style = "display: block; margin-left: auto; margin-right: auto; width: 210px; height: 210px; padding-top: 0px;" src="images/Pratibha.jpg"></span></td>	
+		</tr><tr><td><p><pre>                  </pre></p></td>
+		</tr><tr><td style= "width: 100%; align-self: center;"><h1  style = "font-family: 'Roboto', sans-serif; font-size: 35px; text-align: center">Pratibha Shah</h1>
+			<p><pre>                  </pre></p>
+			<p style = "font-family: 'PT Sans', sans-serif; font-size: 20px">
+				Pratibha Shah, BAMS, MD-Ayurveda, MPH, is a leading Ayurevda Expert in the United States. 
+				Her pioneering initiatives in the field of Ayurveda, have brought her to attention at 
+				the White House, the Department of Health and Human Services, as well as the Consulate 
+				General of India, NYC. For her work, she was also nominated in the Top 20 Women of the 
+				Year, for the year 2014. She is a senior faculty and Ayurveda Domain Expert for 
+				<a style="color: blue" href="https://www.ayurvedaacademy.com/">Kerala 
+					Ayurveda Academy</a> and CEO of My Ayurved LLC. She is the Founder, President of two non-profits -
+					<a style="color: blue" href="http://ayurvedaresearchusa.org/">Council for Ayurveda Research</a> and 
+					<a style="color: blue" href="http://www.wholistichealthalliance.org/">Wholistic Health Alliance</a>. She currently consults out at her
+				  home office in Danvers and at <a style="color: blue" href="https://www.welllifemedical.org/">Well Life Medical</a>, a state of the art Integrative Medicine 
+				  clinic in Massachusetts, USA. Before moving to the US, Shah was a Chief Medical Officer 
+				  with the AYUSH ministry in India.
+			</p>
+		</p></td></tr></td></tr></table></div></div>
+
+
 
 	<!--<div style = "height: 60px;">
 
