--- a/index.html
+++ b/index.html
@@ -345,14 +345,14 @@
 					<p><pre>                  </pre></p>
 					<p style = "font-family: 'PT Sans', sans-serif; font-size: 20px">
 						Pratibha Shah, BAMS, MD-Ayurveda, MPH, is a leading Ayurevda Expert in the United States. 
-						Her pioneering initiatives in the field of Ayurveda, have brought her to attention at 
+						Her pioneering initiatives in the field of Ayurveda have brought her to attention at 
 						the White House, the Department of Health and Human Services, as well as the Consulate 
 						General of India, NYC. For her work, she was also nominated in the Top 20 Women of the 
-						Year, for the year 2014. She is a senior faculty and Ayurveda Domain Expert for 
+						Year in 2014. She is currently a senior faculty member as a Ayurveda Domain Expert for 
 						<a style="color: blue" href="https://www.ayurvedaacademy.com/">Kerala 
-							Ayurveda Academy</a> and CEO of My Ayurved LLC. She is the Founder, President of two non-profits -
+							Ayurveda Academy</a> and CEO of My Ayurved LLC. She is the founder and president of two non-profits -
 							<a style="color: blue" href="http://ayurvedaresearchusa.org/">Council for Ayurveda Research</a> and 
-							<a style="color: blue" href="http://www.wholistichealthalliance.org/">Wholistic Health Alliance</a>. She currently consults out at her
+							<a style="color: blue" href="http://www.wholistichealthalliance.org/">Wholistic Health Alliance</a>. She currently consults at her
 						  home office in Danvers and at <a style="color: blue" href="https://www.welllifemedical.org/">Well Life Medical</a>, a state of the art Integrative Medicine 
 						  clinic in Massachusetts, USA. Before moving to the US, Shah was a Chief Medical Officer 
 						  with the AYUSH ministry in India.
@@ -433,18 +433,18 @@
 		</tr><tr><td style= "width: 100%; align-self: center;"><h1  style = "font-family: 'Roboto', sans-serif; font-size: 35px; text-align: center">Pratibha Shah</h1>
 			<p><pre>                  </pre></p>
 			<p style = "font-family: 'PT Sans', sans-serif; font-size: 20px">
-				Pratibha Shah, BAMS, MD-Ayurveda, MPH, is a leading Ayurevda Expert in the United States. 
-				Her pioneering initiatives in the field of Ayurveda, have brought her to attention at 
-				the White House, the Department of Health and Human Services, as well as the Consulate 
-				General of India, NYC. For her work, she was also nominated in the Top 20 Women of the 
-				Year, for the year 2014. She is a senior faculty and Ayurveda Domain Expert for 
-				<a style="color: blue" href="https://www.ayurvedaacademy.com/">Kerala 
-					Ayurveda Academy</a> and CEO of My Ayurved LLC. She is the Founder, President of two non-profits -
-					<a style="color: blue" href="http://ayurvedaresearchusa.org/">Council for Ayurveda Research</a> and 
-					<a style="color: blue" href="http://www.wholistichealthalliance.org/">Wholistic Health Alliance</a>. She currently consults out at her
-				  home office in Danvers and at <a style="color: blue" href="https://www.welllifemedical.org/">Well Life Medical</a>, a state of the art Integrative Medicine 
-				  clinic in Massachusetts, USA. Before moving to the US, Shah was a Chief Medical Officer 
-				  with the AYUSH ministry in India.
+						Pratibha Shah, BAMS, MD-Ayurveda, MPH, is a leading Ayurevda Expert in the United States. 
+						Her pioneering initiatives in the field of Ayurveda have brought her to attention at 
+						the White House, the Department of Health and Human Services, as well as the Consulate 
+						General of India, NYC. For her work, she was also nominated in the Top 20 Women of the 
+						Year in 2014. She is currently a senior faculty member as a Ayurveda Domain Expert for 
+						<a style="color: blue" href="https://www.ayurvedaacademy.com/">Kerala 
+							Ayurveda Academy</a> and CEO of My Ayurved LLC. She is the founder and president of two non-profits -
+							<a style="color: blue" href="http://ayurvedaresearchusa.org/">Council for Ayurveda Research</a> and 
+							<a style="color: blue" href="http://www.wholistichealthalliance.org/">Wholistic Health Alliance</a>. She currently consults at her
+						  home office in Danvers and at <a style="color: blue" href="https://www.welllifemedical.org/">Well Life Medical</a>, a state of the art Integrative Medicine 
+						  clinic in Massachusetts, USA. Before moving to the US, Shah was a Chief Medical Officer 
+						  with the AYUSH ministry in India.
 			</p>
 		</p></td></tr></td></tr></table></div></div>
 
