--- a/index.html
+++ b/index.html
@@ -345,20 +345,73 @@
 					<p><pre>                  </pre></p>
 					<p style = "font-family: 'PT Sans', sans-serif; font-size: 20px">
 						Pratibha Shah, BAMS, MD-Ayurveda, MPH, is a leading Ayurevda Expert in the United States. 
-						Her pioneering initiatives in the field of Ayurveda have brought her to attention at 
+						Her pioneering initiatives in the field of Ayurveda, have brought her to attention at 
 						the White House, the Department of Health and Human Services, as well as the Consulate 
 						General of India, NYC. For her work, she was also nominated in the Top 20 Women of the 
-						Year in 2014. She is currently a senior faculty member as a Ayurveda Domain Expert for 
+						Year, for the year 2014. She is a senior faculty and Ayurveda Domain Expert for 
 						<a style="color: blue" href="https://www.ayurvedaacademy.com/">Kerala 
-							Ayurveda Academy</a> and CEO of My Ayurved LLC. She is the founder and president of two non-profits -
+							Ayurveda Academy</a> and CEO of My Ayurved LLC. She is the Founder, President of two non-profits -
 							<a style="color: blue" href="http://ayurvedaresearchusa.org/">Council for Ayurveda Research</a> and 
-							<a style="color: blue" href="http://www.wholistichealthalliance.org/">Wholistic Health Alliance</a>. She currently consults at her
+							<a style="color: blue" href="http://www.wholistichealthalliance.org/">Wholistic Health Alliance</a>. She currently consults out at her
 						  home office in Danvers and at <a style="color: blue" href="https://www.welllifemedical.org/">Well Life Medical</a>, a state of the art Integrative Medicine 
 						  clinic in Massachusetts, USA. Before moving to the US, Shah was a Chief Medical Officer 
 						  with the AYUSH ministry in India.
 					</p>
 
 			</td></tr></table>
+	</div>
+</div>
+
+
+<div class="contentSection yellow">
+	<div class="textBox">
+		<table style="width:100%; min-height:200px; padding-top: 0px;" border="0" cellspacing="0">
+			<tr>
+				<td style="width:35%;min-height: 100%"><span><img src="images/nathan.jpg" style="width: 210px; height: 300px; padding-top: 0px; padding-left: 10px; float: left; margin-right: 10px;"></span></td>
+				<td style="width:60%;min-height: 100%;align-self: left; ">
+				
+				<h1  style = "font-family: 'Roboto', sans-serif; font-size: 35px">Nathan Ramesh</h1>
+				<p><pre>                  </pre></p>
+				<p style = "font-family: 'PT Sans', sans-serif; font-size: 20px">
+					Nathan Ramesh is currently a senior at Lexington High School. From a young age, 
+					Nathan’s fascination with mathematics and passion for the physical sciences have 
+					driven him towards academic success. An ever-present competitor at school and 
+					regional math competitions alike, Nathan has accumulated a multitude of competitive 
+					scholastic awards over the years. Nathan is a well-known figure on the high school 
+					campus, contributing to the LHS culture with his infectious sense of humor and bold 
+					displays of “male fashion”. Some of Nathan’s other noteworthy achievements include 
+					contributions to several professional scientific publications, an active role in
+					 Lexington’s National Honor Society chapter, a longtime pursuit of the clarinet, 
+					 and a lengthy commitment to peer support. Nathan’s impressive accomplishments 
+					 have not gone unnoticed—following an early decision acceptance, Nathan will continue 
+					 his education at the Massachusetts Institute of Technology in the fall of 2019.
+				</p>
+
+		</td></tr></table>
+	</div>
+</div>
+
+
+<div class="contentSection yellow">
+	<div class="textBox">
+		<table style="width:100%; min-height:200px; padding-top: 0px;" border="0" cellspacing="0">
+			<tr>
+				<td style="width:35%;min-height: 100%"><span><img src="images/ranc.jpg" style="width: 210px; height: 210px; padding-top: 0px; padding-left: 10px; float: left; margin-right: 10px;"></span></td>
+				<td style="width:60%;min-height: 100%;align-self: left; ">
+				
+				<h1  style = "font-family: 'Roboto', sans-serif; font-size: 35px">Joe Rancatore</h1>
+				<p><pre>                  </pre></p>
+				<p style = "font-family: 'PT Sans', sans-serif; font-size: 20px">
+					Joe Rancatore grew up in Staten Island, New Jersey, and Saint Louis, Missouri.
+					He moved to Boston in 1981, working with his brother at Toscanini's through 1985.
+					He first opened Rancatore's ice cream in 1985. Following that, he opened Lexington's Ranctore's
+					in 2004, and Newtonville Rancatore's in 2014.
+
+					He married in 1987 and moved to Lexington in 1996, raising two sons who graduated from 
+					the Lexington High School in 2007 and 2009.
+				</p>
+
+		</td></tr></table>
 	</div>
 </div>
 
@@ -433,22 +486,57 @@
 		</tr><tr><td style= "width: 100%; align-self: center;"><h1  style = "font-family: 'Roboto', sans-serif; font-size: 35px; text-align: center">Pratibha Shah</h1>
 			<p><pre>                  </pre></p>
 			<p style = "font-family: 'PT Sans', sans-serif; font-size: 20px">
-						Pratibha Shah, BAMS, MD-Ayurveda, MPH, is a leading Ayurevda Expert in the United States. 
-						Her pioneering initiatives in the field of Ayurveda have brought her to attention at 
-						the White House, the Department of Health and Human Services, as well as the Consulate 
-						General of India, NYC. For her work, she was also nominated in the Top 20 Women of the 
-						Year in 2014. She is currently a senior faculty member as a Ayurveda Domain Expert for 
-						<a style="color: blue" href="https://www.ayurvedaacademy.com/">Kerala 
-							Ayurveda Academy</a> and CEO of My Ayurved LLC. She is the founder and president of two non-profits -
-							<a style="color: blue" href="http://ayurvedaresearchusa.org/">Council for Ayurveda Research</a> and 
-							<a style="color: blue" href="http://www.wholistichealthalliance.org/">Wholistic Health Alliance</a>. She currently consults at her
-						  home office in Danvers and at <a style="color: blue" href="https://www.welllifemedical.org/">Well Life Medical</a>, a state of the art Integrative Medicine 
-						  clinic in Massachusetts, USA. Before moving to the US, Shah was a Chief Medical Officer 
-						  with the AYUSH ministry in India.
+				Pratibha Shah, BAMS, MD-Ayurveda, MPH, is a leading Ayurevda Expert in the United States. 
+				Her pioneering initiatives in the field of Ayurveda, have brought her to attention at 
+				the White House, the Department of Health and Human Services, as well as the Consulate 
+				General of India, NYC. For her work, she was also nominated in the Top 20 Women of the 
+				Year, for the year 2014. She is a senior faculty and Ayurveda Domain Expert for 
+				<a style="color: blue" href="https://www.ayurvedaacademy.com/">Kerala 
+					Ayurveda Academy</a> and CEO of My Ayurved LLC. She is the Founder, President of two non-profits -
+					<a style="color: blue" href="http://ayurvedaresearchusa.org/">Council for Ayurveda Research</a> and 
+					<a style="color: blue" href="http://www.wholistichealthalliance.org/">Wholistic Health Alliance</a>. She currently consults out at her
+				  home office in Danvers and at <a style="color: blue" href="https://www.welllifemedical.org/">Well Life Medical</a>, a state of the art Integrative Medicine 
+				  clinic in Massachusetts, USA. Before moving to the US, Shah was a Chief Medical Officer 
+				  with the AYUSH ministry in India.
 			</p>
 		</p></td></tr></td></tr></table></div></div>
 
+		<div class="contentSection yellow"><div class="textBox"><table style="width:100%; min-height:200px; padding-top: 0px;" border="0" cellspacing="0">
+			<tr><td style="width:100%;min-height: 100%"><span><img style = "display: block; margin-left: auto; margin-right: auto; width: 190px; height: 280px; padding-top: 0px;" src="images/nathan.jpg"></span></td>	
+			</tr><tr><td><p><pre>                  </pre></p></td>
+			</tr><tr><td style= "width: 100%; align-self: center;"><h1  style = "font-family: 'Roboto', sans-serif; font-size: 35px; text-align: center">Nathan Ramesh</h1>
+				<p><pre>                  </pre></p>
+				<p style = "font-family: 'PT Sans', sans-serif; font-size: 20px">
+					Nathan Ramesh is currently a senior at Lexington High School. From a young age, 
+					Nathan’s fascination with mathematics and passion for the physical sciences have 
+					driven him towards academic success. An ever-present competitor at school and 
+					regional math competitions alike, Nathan has accumulated a multitude of competitive 
+					scholastic awards over the years. Nathan is a well-known figure on the high school 
+					campus, contributing to the LHS culture with his infectious sense of humor and bold 
+					displays of “male fashion”. Some of Nathan’s other noteworthy achievements include 
+					contributions to several professional scientific publications, an active role in
+					 Lexington’s National Honor Society chapter, a longtime pursuit of the clarinet, 
+					 and a lengthy commitment to peer support. Nathan’s impressive accomplishments 
+					 have not gone unnoticed—following an early decision acceptance, Nathan will continue 
+					 his education at the Massachusetts Institute of Technology in the fall of 2019.
+				</p>
+			</p></td></tr></td></tr></table></div></div>
 
+			<div class="contentSection yellow"><div class="textBox"><table style="width:100%; min-height:200px; padding-top: 0px;" border="0" cellspacing="0">
+				<tr><td style="width:100%;min-height: 100%"><span><img style = "display: block; margin-left: auto; margin-right: auto; width: 210px; height: 210px; padding-top: 0px;" src="images/ranc.jpg"></span></td>	
+				</tr><tr><td><p><pre>                  </pre></p></td>
+				</tr><tr><td style= "width: 100%; align-self: center;"><h1  style = "font-family: 'Roboto', sans-serif; font-size: 35px; text-align: center">Joe Rancatore</h1>
+					<p><pre>                  </pre></p>
+					<p style = "font-family: 'PT Sans', sans-serif; font-size: 20px">
+						Joe Rancatore grew up in Staten Island, New Jersey, and Saint Louis, Missouri.
+						He moved to Boston in 1981, working with his brother at Toscanini's through 1985.
+						He first opened Rancatore's ice cream in 1985. Following that, he opened Lexington's Ranctore's
+						in 2004, and Newtonville Rancatore's in 2014.
+	
+						He married in 1987 and moved to Lexington in 1996, raising two sons who graduated from 
+						the Lexington High School in 2007 and 2009.
+					</p>
+			</p></td></tr></td></tr></table></div></div>
 
 	<!--<div style = "height: 60px;">
 
