--- a/index.html
+++ b/index.html
@@ -762,7 +762,7 @@
 				</td>
 				<td>
 					<p> 
-						<a href = "https://www.facebook.com/">
+						<a href = "https://www.facebook.com/events/690900717973494/">
 						<img src ="images/facebook.jpg" style="width: 50px; height: 50px"/>
 						</a>
 						<a href = "https://www.instagram.com/">
